# port-linker

./: .gitignore  ARCHITECTURE.md  Cargo.toml  PHASE_6_TEST_SUMMARY.md  README.md  TEST_PLAN_PHASE1.md  build.rs  ports.example.toml
.claude/agents/: engineering-manager.md  qa-test-architect.md  rust-perf-engineer.md
.github/workflows/: actionlint.yaml  ci.yaml  ci.yml  release.yaml  toml.yaml
crates/agent/: Cargo.toml
crates/agent-build/: Cargo.toml
crates/agent-build/src/: lib.rs
crates/agent-embed/: Cargo.toml  build.rs
crates/agent-embed/src/: lib.rs
crates/agent/src/: diff.rs  lib.rs  log_forward.rs  logging.rs  main.rs  scan_loop.rs  scanner.rs  subscriber.rs
crates/assets/: Cargo.toml  build.rs
crates/assets/src/: lib.rs
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: binding_manager.rs  bootstrap.rs  logging.rs  main.rs  notifications.rs  remote_platform.rs
crates/cli/src/ssh/: client.rs  config.rs  mod.rs
crates/common/: Cargo.toml
crates/common/src/: ephemeral.rs  error.rs  lib.rs  process.rs
crates/common/src/platform/: linux.rs  macos.rs  mod.rs  stub.rs  unix.rs  windows.rs
crates/forward/: Cargo.toml
crates/forward/src/: agent.rs  error.rs  lib.rs  manager.rs  tcp.rs  udp.rs
crates/notify/: Cargo.toml
crates/notify/src/: desktop.rs  lib.rs  mapping.rs
crates/port-linker/: Cargo.toml
crates/port-linker-agent-build/: Cargo.toml
crates/port-linker-agent-build/src/: lib.rs
crates/port-linker-agent-embed/: Cargo.toml  build.rs
crates/port-linker-agent-embed/src/: lib.rs
crates/port-linker-assets/: Cargo.toml  build.rs
crates/port-linker-forward/: Cargo.toml
crates/port-linker-forward/src/: agent.rs  error.rs  lib.rs  manager.rs  tcp.rs  udp.rs
crates/port-linker-notify/: Cargo.toml
crates/port-linker-notify/src/: desktop.rs  error.rs  lib.rs  mapping.rs
crates/port-linker-proto/: Cargo.toml
crates/port-linker-proto/src/: lib.rs
crates/port-linker-ssh/: Cargo.toml
crates/port-linker-ssh/src/: client.rs  error.rs  lib.rs  scanner.rs
crates/port-linker-ssh/src/process/: killer.rs
crates/port-linker-udp-build/: Cargo.toml
crates/port-linker-udp-build/src/: lib.rs
crates/port-linker-udp-embed/: Cargo.toml  build.rs
crates/port-linker-udp-embed/src/: lib.rs
crates/port-linker/src/: cli.rs  error.rs  main.rs  monitor.rs
crates/port-linker/src/forward/: manager.rs  mod.rs  tunnel.rs  udp.rs
crates/port-linker/src/notify/: desktop.rs  mod.rs
crates/port-linker/src/process/: mod.rs
crates/port-linker/src/ssh/: client.rs  handler.rs  scanner.rs
crates/port-scanner/: Cargo.toml
crates/port-scanner/src/: error.rs  lib.rs  netstat.rs  procfs.rs  serial.rs  ss.rs  types.rs
crates/proto/: Cargo.toml
crates/proto/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: codec.rs  lib.rs
crates/quic-over-tcp/: Cargo.toml
crates/quic-over-tcp/src/: lib.rs
crates/relay-embed/: Cargo.toml  build.rs
crates/relay-embed/src/: lib.rs
crates/scanner/: Cargo.toml
crates/scanner/src/: lib.rs  netstat.rs  platform.rs  procfs.rs  serial.rs  spawn.rs  ss.rs  types.rs
crates/ssh/: Cargo.toml
crates/ssh/src/: client.rs  handler.rs  lib.rs  scanner.rs
crates/ssh/src/process/: detector.rs  killer.rs  mod.rs
crates/target-agent/: Cargo.toml
crates/target-agent/src/: logging.rs  main.rs  subscriber.rs
crates/transport/: Cargo.toml
crates/transport/src/: error.rs  lib.rs  negotiate.rs  quic.rs  quic_config.rs  stdio.rs  tcp.rs  types.rs
crates/udp-proxy/: Cargo.toml
crates/udp-proxy/src/: main.rs
crates/udp-relay/: Cargo.toml
crates/udp-relay/src/: main.rs
scripts/: measure-agent-size.sh
src/: cli.rs  error.rs  main.rs  mapping.rs  monitor.rs
src/forward/: manager.rs  mod.rs  tunnel.rs
src/notify/: desktop.rs  mod.rs
src/process/: detector.rs  killer.rs
src/ssh/: client.rs  handler.rs  mod.rs  scanner.rs
tests/: Cargo.toml  README.md  integration_test.rs
tests/common/: mod.rs
tests/docker/: Dockerfile.ssh-target  Dockerfile.sshnode  docker-compose.yaml  docker-compose.yml  docker-entrypoint.sh  run-tests.sh  setup-test-env.sh  start-services.sh
tests/docker/firewall/: allow-all.sh  block-udp.sh
tests/docker/scenarios/: lib.sh  scenario_a.sh  scenario_b.sh  scenario_c.sh  scenario_d_tcp.sh  scenario_d_udp.sh  scenario_e.sh  scenario_f_dataflow.sh
tests/docker/ssh/: setup-keys.sh  ssh_config  sshd_config
tests/docker/ssh/keys/: .gitignore
tests/e2e/: mod.rs  tcp.rs  udp.rs
tests/e2e/snapshots/: e2e__help_output.snap  e2e__ntest_callback-2.snap  e2e__ntest_callback.snap  e2e__version_output.snap
tests/fixtures/netstat_output/: linux.txt
tests/fixtures/port_mappings/: custom.toml  simple.toml
tests/fixtures/ss_output/: ipv6.txt  no_process.txt  specific_bind.txt  standard.txt
tests/integration/: cli_tests.rs  mapping_tests.rs  mod.rs  scanner_tests.rs
