[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "A CLI tool that connects to remote systems via SSH and automatically forwards discovered ports to localhost"
repository = "https://github.com/JosiahParry/port-linker"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# SSH
russh = "0.57"
ssh2-config-rs = "0.7.2"

# System
sysinfo = "0.38"
dirs = "6"
shellexpand = "3"
whoami = "2"

# Notifications
notify-rust = "4"

# Logging
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "ansi"] }

# Error handling
thiserror = "2"

# User interaction
dialoguer = "0.12"

# Internal crates
proto = { path = "crates/proto" }
scanner = { path = "crates/scanner" }
ssh = { path = "crates/ssh" }
notify = { path = "crates/notify" }
forward = { path = "crates/forward" }
agent-build = { path = "crates/agent-build" }
agent-embed = { path = "crates/agent-embed" }
assert_cmd = "2"
assets = { path = "crates/assets" }
base64 = "0.22"
bytes = "1"
insta = "1"
libc = "0.2"
ntest = "0.9"
quinn-proto = { version = "0.11", default-features = false }
rcgen = "0.14"
resvg = "0.46"
ring = "0.17"
rustls = { version = "0.23", default-features = false }
rustls-pki-types = "1"
transport = { path = "crates/transport" }
wait-timeout = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true

# Heavily optimized profile for agent - minimal binary size for SSH transfer
# Based on release but with aggressive size optimizations
[profile.agent-release]
inherits = "release"
opt-level = "z"           # Optimize for size
lto = true                # Link-time optimization
codegen-units = 1         # Single codegen unit for better optimization
panic = "abort"           # No unwinding = smaller binary
strip = true              # Strip all symbols

[workspace.package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
get_first = "allow"
default_constructed_unit_structs = "allow"
expect_used = "allow"
cloned_instead_of_copied = "warn"
default_numeric_fallback = "allow"
transmute_ptr_to_ptr = "deny"
unchecked_time_subtraction = "deny"
unsafe_derive_deserialize = "deny"
as_underscore = "deny"
arithmetic_side_effects = "deny"
cast_lossless = "deny"
checked_conversions = "deny"
ptr_as_ptr = "deny"
ptr_cast_constness = "deny"
invalid_upcast_comparisons = "deny"
wildcard_dependencies = "deny"
default_union_representation = "deny"
filetype_is_file = "deny"
indexing_slicing = "deny"
lossy_float_literal = "deny"
string_slice = "deny"
undocumented_unsafe_blocks = "deny"
debug_assert_with_mut_call = "deny"
large_stack_frames = "warn"
unwrap_used = "warn"
needless_raw_string_hashes = "warn"
fallible_impl_from = "deny"
unicode_not_nfc = "warn"
unnecessary_box_returns = "warn"
unused_async = "warn"
zero_sized_map_values = "warn"
mut_mut = "warn"
redundant_feature_names = "warn"
dbg_macro = "warn" # Could be changed to just deny in ci?
else_if_without_else = "warn"
empty_drop = "warn"
exit = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
format_push_string = "warn"
large_include_file = "warn"
let_underscore_must_use = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_name_method = "warn"
unnecessary_self_imports = "warn"
branches_sharing_code = "warn"
clear_with_drain = "warn"
collection_is_never_read = "warn"
empty_line_after_doc_comments = "warn"
empty_line_after_outer_attr = "warn"
needless_collect = "warn"
needless_pass_by_ref_mut = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
readonly_write_lock = "warn"
redundant_clone = "warn"
redundant_pub_crate = "warn"
significant_drop_in_scrutinee = "deny"
significant_drop_tightening = "warn"
trait_duplication_in_bounds = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
negative_feature_names = "warn"
macro_use_imports = "warn"
inconsistent_struct_constructor = "warn"
implicit_clone = "warn"
fn_params_excessive_bools = "warn"
enum_glob_use = "warn"
iter_not_returning_iterator = "warn"
manual_string_new = "warn"
mismatching_type_param_order = "warn"
should_panic_without_expect = "warn"
unnested_or_patterns = "warn"
semicolon_if_nothing_returned = "warn"
unreadable_literal = "warn"
used_underscore_binding = "warn"
verbose_bit_mask = "warn"
from_iter_instead_of_collect = "warn"
deref_by_slicing = "warn"
empty_structs_with_brackets = "warn"
error_impl_error = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
missing_assert_message = "warn"
needless_raw_strings = "warn"
pub_without_shorthand = "warn"
self_named_module_files = "warn"
semicolon_inside_block = "warn"
unseparated_literal_suffix = "warn"
string_add = "warn"
tests_outside_test_module = "warn"
try_err = "warn"
unneeded_field_pattern = "allow"
verbose_file_reads = "warn"
wildcard_enum_match_arm = "deny"
derive_partial_eq_without_eq = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_with_drain = "warn"
missing_const_for_fn = "warn"
nonstandard_macro_braces = "warn"
suboptimal_flops = "warn"
tuple_array_conversions = "warn"
type_repetition_in_bounds = "warn"
unnecessary_struct_initialization = "warn"
use_self = "warn"
useless_let_if_seq = "warn"
string_add_assign = "warn"
trivially_copy_pass_by_ref = "warn"
unused_self = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
mixed_read_write_in_expression = "warn"
string_lit_chars_any = "warn"
allow_attributes_without_reason = "deny"
