[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "A CLI tool that connects to remote systems via SSH and automatically forwards discovered ports to localhost"
repository = "https://github.com/JosiahParry/port-linker"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# SSH
russh = "0.57"
ssh2-config-rs = "0.7.2"

# System
sysinfo = "0.38"
dirs = "6"
shellexpand = "3"
whoami = "2"

# Notifications
notify-rust = "4"

# Logging
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "ansi"] }

# Error handling
thiserror = "2"

# User interaction
dialoguer = "0.12"

# Internal crates
scanner = { path = "crates/scanner" }
notify = { path = "crates/notify" }
assert_cmd = "2"
assets = { path = "crates/assets" }
base64 = "0.22"
bytes = "1"
insta = "1"
libc = "0.2"
ntest = "0.9"
quinn-proto = { version = "0.11", default-features = false }
rcgen = "0.14"
resvg = "0.46"
ring = "0.17"
rustls = { version = "0.23", default-features = false }
rustls-pki-types = "1"
wait-timeout = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true

# Heavily optimized profile for agent - minimal binary size for SSH transfer
# Based on release but with aggressive size optimizations
[profile.agent-release]
inherits = "release"
opt-level = "z"           # Optimize for size
lto = true                # Link-time optimization
codegen-units = 1         # Single codegen unit for better optimization
panic = "abort"           # No unwinding = smaller binary
strip = true              # Strip all symbols

[workspace.package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
