[workspace]
resolver = "2"
members = ["crates/*", "tests"]

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "A CLI tool that connects to remote systems via SSH and automatically forwards discovered ports to localhost"
repository = "https://github.com/JosiahParry/port-linker"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread", "macros", "net", "sync", "io-util", "time"] }

# CLI
clap = { version = "4", features = ["derive"] }

# SSH
russh = "0.57"

# System
dirs = "6"

# Notifications
notify-rust = "4"

# Logging
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "ansi", "fmt", "registry"] }
tracing-appender = "0.2"

# Error handling
thiserror = "2"

# User interaction
dialoguer = "0.12"

# Internal crates
protocol = { path = "crates/protocol" }
common = { path = "crates/common" }
notify = { path = "crates/notify" }
assets = { path = "crates/assets" }

# Serialization
rkyv = { version = "0.8", features = ["bytecheck"] }
bytes = "1"

# QUIC transport
quinn = { version = "0.11", default-features = false, features = ["rustls-ring", "runtime-tokio"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pki-types = "1"
rcgen = { version = "0.14", default-features = false, features = ["ring"] }
ring = "0.17"

# System
libc = "0.2"

# Testing
wait-timeout = "0.2"

# Build
resvg = "0.46"

[profile.release]
lto = true
codegen-units = 1
strip = true

# Heavily optimized profile for agent - minimal binary size for SSH transfer
# Based on release but with aggressive size optimizations
# Reference: https://github.com/johnthagen/min-sized-rust
[profile.agent-release]
inherits = "release"
opt-level = "z"           # Optimize for size
lto = true                # Full link-time optimization
codegen-units = 1         # Single codegen unit for maximum optimization
panic = "abort"           # No unwinding = smaller binary
strip = true              # Strip all symbols
overflow-checks = false   # Remove overflow check panic paths
