[package]
name = "agent"
version.workspace = true
edition.workspace = true
description = "Remote agent binary for port-linker: port scanning + multiplexed UDP forwarding"
license.workspace = true

[features]
# Enable verbose per-packet trace logging (very noisy, only for debugging)
verbose = []
# Enable tracing integration - sends structured logs to the host over the protocol.
# When off, all logging macros compile to nothing (except agent_error! which uses eprintln).
agent-tracing = ["dep:tracing", "dep:tracing-core"]

[dependencies]
proto = { workspace = true }
scanner = { workspace = true }
transport = { workspace = true }
libc = { workspace = true }
tracing = { workspace = true, optional = true }
tracing-core = { workspace = true, optional = true }

[lints]
workspace = true
