[package]
name = "agent"
version.workspace = true
edition.workspace = true

[[bin]]
name = "port-linker-agent"
path = "src/main.rs"

[dependencies]
protocol = { path = "../protocol" }
common = { path = "../common" }
tokio = { workspace = true, default-features = false, features = ["rt", "macros", "net", "sync", "io-util", "time"] }
quinn.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
rcgen.workspace = true
tracing.workspace = true
tracing-core.workspace = true
tracing-subscriber = { workspace = true, default-features = false, features = ["fmt", "registry"] }
bytes.workspace = true
