[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true
dirs.workspace = true
protocol = { path = "../protocol" }
tracing.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
notify-rust.workspace = true
