[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true
dirs.workspace = true
protocol = { path = "../protocol" }
tracing.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
notify-rust.workspace = true

[target.'cfg(windows)'.dependencies]
notify-rust.workspace = true
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_System_Threading",
] }
