[package]
name = "forward"
version.workspace = true
edition.workspace = true
description = "TCP and UDP tunnel management for port-linker"
repository.workspace = true
license.workspace = true

[dependencies]
proto.workspace = true
transport = { workspace = true }
ssh = { workspace = true }
notify = { workspace = true }
agent-embed = { workspace = true }
scanner = { workspace = true }
russh.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true

[lints]
workspace = true
