[package]
name = "notify"
version.workspace = true
edition.workspace = true
description = "Desktop notifications and port mapping for port-linker"
repository.workspace = true
license.workspace = true

[dependencies]
assets = { workspace = true }
common = { path = "../common" }
notify-rust.workspace = true
tracing.workspace = true
thiserror.workspace = true
dirs.workspace = true
