[package]
name = "port-linker-agent-embed"
version.workspace = true
edition.workspace = true
description = "Embedded target-agent binaries for port-linker"
repository.workspace = true
license.workspace = true

[dependencies]

[build-dependencies]
port-linker-agent-build = { path = "../port-linker-agent-build" }

[lints]
workspace = true
