[package]
name = "port-linker-notify"
version.workspace = true
edition.workspace = true
description = "Desktop notifications and port mapping for port-linker"
repository.workspace = true
license.workspace = true

[dependencies]
port-linker-proto.workspace = true
port-linker-assets = { path = "../port-linker-assets" }
notify-rust.workspace = true
tracing.workspace = true
thiserror.workspace = true
dirs.workspace = true

[lints]
workspace = true
