[package]
name = "port-linker-ssh"
version.workspace = true
edition.workspace = true
description = "SSH client, port scanner, and process management for port-linker"
repository.workspace = true
license.workspace = true

[dependencies]
port-linker-proto.workspace = true
port-scanner = { path = "../port-scanner" }
russh.workspace = true
ssh2-config-rs.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
dialoguer.workspace = true
dirs.workspace = true
shellexpand.workspace = true
whoami.workspace = true
sysinfo.workspace = true
base64 = "0.22"

[lints]
workspace = true
