[package]
name = "port-linker"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# Library crates
port-linker-ssh = { path = "../port-linker-ssh" }
port-linker-forward = { path = "../port-linker-forward" }
port-linker-notify = { path = "../port-linker-notify" }
port-linker-proto.workspace = true

# Async runtime
tokio.workspace = true

# CLI
clap.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
thiserror.workspace = true

[dev-dependencies]
assert_cmd = "2"
insta = "1"
libc = "0.2"
ntest = "0.9"
wait-timeout = "0.2"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/port-linker-{ target }{ archive-suffix }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/port-linker-linux-x86_64.tar.gz"

[package.metadata.binstall.overrides.x86_64-unknown-linux-musl]
pkg-url = "{ repo }/releases/download/v{ version }/port-linker-linux-x86_64-musl.tar.gz"

[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/port-linker-linux-aarch64.tar.gz"

[package.metadata.binstall.overrides.aarch64-unknown-linux-musl]
pkg-url = "{ repo }/releases/download/v{ version }/port-linker-linux-aarch64-musl.tar.gz"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/port-linker-macos-x86_64.tar.gz"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/port-linker-macos-aarch64.tar.gz"

[[test]]
name = "e2e"
path = "../../tests/e2e/mod.rs"
