[package]
name = "port-linker"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# Library crates
ssh = { workspace = true }
forward = { workspace = true }
notify = { workspace = true }
proto.workspace = true

# Async runtime
tokio.workspace = true

# CLI
clap.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
thiserror.workspace = true

[dev-dependencies]
assert_cmd = { workspace = true }
insta = { workspace = true }
libc = { workspace = true }
ntest = { workspace = true }
wait-timeout = { workspace = true }

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/port-linker-{ target }{ archive-suffix }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/port-linker-linux-x86_64.tar.gz"

[package.metadata.binstall.overrides.x86_64-unknown-linux-musl]
pkg-url = "{ repo }/releases/download/v{ version }/port-linker-linux-x86_64-musl.tar.gz"

[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/port-linker-linux-aarch64.tar.gz"

[package.metadata.binstall.overrides.aarch64-unknown-linux-musl]
pkg-url = "{ repo }/releases/download/v{ version }/port-linker-linux-aarch64-musl.tar.gz"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/port-linker-macos-x86_64.tar.gz"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/port-linker-macos-aarch64.tar.gz"

[[test]]
name = "e2e"
path = "../../tests/e2e/mod.rs"

[lints]
workspace = true
