[package]
name = "scanner"
version.workspace = true
edition.workspace = true
description = "Port scanning library for discovering listening ports on local and remote systems"
repository.workspace = true
license.workspace = true

[dependencies]
proto = { path = "../proto" }

[lints]
workspace = true
