[package]
name = "transport"
version.workspace = true
edition.workspace = true
description = "Transport trait and adapters for port-linker agent communication"
repository.workspace = true
license.workspace = true

[dependencies]
libc = "0.2"
proto.workspace = true
thiserror.workspace = true
tracing.workspace = true

# QUIC transport
quinn-proto = { version = "0.11", default-features = false, features = ["rustls", "ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
ring = "0.17"
rcgen = "0.13"
rustls-pki-types = "1"
bytes = "1"

[lints]
workspace = true
