[package]
name = "transport"
version.workspace = true
edition.workspace = true
description = "Transport trait and adapters for port-linker agent communication"
repository.workspace = true
license.workspace = true

[dependencies]
libc = { workspace = true }
proto.workspace = true
thiserror.workspace = true
tracing.workspace = true

# QUIC transport
quinn-proto = { workspace = true, features = ["rustls", "ring"] }
rustls = { workspace = true, features = ["ring", "std"] }
ring = { workspace = true }
rcgen = { workspace = true }
rustls-pki-types = { workspace = true }
bytes = { workspace = true }

[lints]
workspace = true
